[project]
name = "victoria-road"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "'", email = "michael@databooth.com.au"},
]
dependencies = [
    "notebook>=7.1.2",
    "pandas>=2.2.1",
    "duckdb>=0.10.1",
    "ipykernel>=6.29.3",
    "folium>=0.16.0",
    "matplotlib>=3.8.3",
    "httpx>=0.27.0",
    "plotly>=5.20.0",
    "streamlit>=1.32.2",
    "watchdog>=4.0.0",
    "loguru>=0.7.2",
    "streamlit-folium>=0.18.0",
    "haversine>=2.8.1",
    "mosaic-widget>=0.1.0",
    "marimo>=0.3.3",
    "ipywidgets>=8.1.2",
    "itables>=2.0.0",
    "openparse[ml]>=0.5.1",
    "python-dotenv>=1.0.1",
    "markdownify>=0.12.1",
    "ydata-profiling>=4.7.0",
    "setuptools>=69.2.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "DataBooth"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
lint = [
    "black[jupyter]>=24.3.0",
]
